--- a/betRef/betRef_1.html
+++ b/betRef/betRef_1.html
@@ -6,8 +6,8 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <p>
-                    <span class="selfTxt" style="font-weight:bold;">VNC88.com</span>Với mong muốn có thể cung cấp cho người chơi những trò chơi với nền tảng công nghệ trực tuyến hiện đại, chất lượng cao, mang lại trải nghiệm tốt nhất, Fun88 đã hợp tác
-                    với rất nhiều đối tác là các công ty phần mềm trò chơi uy tín nhất thế giới hiện nay như One Works, Microgaming, Entwine, Crown Casino, Playtech, Betsoft, Gold Deluxe, Bodog…
+                    <span class="selfTxt" style="font-weight:bold;">vnc88</span>Với mong muốn có thể cung cấp cho người chơi những trò chơi với nền tảng công nghệ trực tuyến hiện đại, chất lượng cao, mang lại trải nghiệm tốt nhất, Fun88 đã hợp tác với
+                    rất nhiều đối tác là các công ty phần mềm trò chơi uy tín nhất thế giới hiện nay như One Works, Microgaming, Entwine, Crown Casino, Playtech, Betsoft, Gold Deluxe, Bodog…
                 </p>
             </div>
 
@@ -83,7 +83,7 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88/">vnc88</a> </span>
                     </li>
                 </ul>
             </div>
