--- a/betRef/betRef_2.html
+++ b/betRef/betRef_2.html
@@ -18,8 +18,8 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt" style="font-weight:bold;">VNC88.com</span><a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">123BET</span></a>được thành lập vào năm 2012 và chuyên điều hành kinh
-                        doanh các hoạt động trò chơi khác nhau. Các sản phẩm và dịch vì trò chơi chúng tôi cung cấp được ủy quyền và giám sát bởi công ty cổ phần giải trí và nghỉ dưỡng First Cagayan ( www.firstcagayan.com ) tại đặc khu kinh tế soogn Cagayan
+                        <span class="selfTxt" style="font-weight:bold;">vnc88</span><a href="https://fun213213.com/euxc" target="_blank" rel="noopener"><span style="color:red;">123BET</span></a>được thành lập vào năm 2012 và chuyên điều hành kinh doanh
+                        các hoạt động trò chơi khác nhau. Các sản phẩm và dịch vì trò chơi chúng tôi cung cấp được ủy quyền và giám sát bởi công ty cổ phần giải trí và nghỉ dưỡng First Cagayan ( www.firstcagayan.com ) tại đặc khu kinh tế soogn Cagayan
                         của Philippines. Chúng tôi cung cấp các sản phẩm dịch vụ của chúng tôi cho các thành viên trong 24h trong ngày mỗi năm.
                     </li>
                     <li>
@@ -178,7 +178,7 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại : <span style="color:red;"><a href="https://www.vnc88/">vnc88</a> </span>
                     </li>
                 </ul>
             </div>
