--- a/betRef/betRef_5.html
+++ b/betRef/betRef_5.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li>
                         <li>
-                            <span class="selfTxt" style="font-weight:bold;">VNC88.com</span><a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">Nhà cái AE888</span></a>– Một trong những công ty được đăng
-                            ký hợp pháp của Costa Rica và được chính cơ quan này công nhận là một nhà cái uy tín, chất lượng và đáng tin cậy nhất. Mục tiêu của <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">AE888</span></a>là
+                            <span class="selfTxt" style="font-weight:bold;">vnc88</span><a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">Nhà cái AE888</span></a>– Một trong những công ty được đăng ký
+                            hợp pháp của Costa Rica và được chính cơ quan này công nhận là một nhà cái uy tín, chất lượng và đáng tin cậy nhất. Mục tiêu của <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;">AE888</span></a>là
                             tạo ra một sân chơi giải trí chất lượng cao, đa dạng nhất thị trường cá cược trực tuyến. Mang lại cho người chơi sự lựa chọn hợp lý, thú vị cùng dịch vụ chăm sóc khách hàng nhanh chóng, tiện lợi và tận tình nhất. Trong thị
                             trường trò chơi trực tuyến ngày càng sôi động và lớn mạnh, ngoài các trò chơi, an ninh mạng là vấn đề được khách hàng quan tâm đến nhiều nhất. Khi đến với
                             <a href="https://www.ae3888.com/?agt=amg668" target="_blank" rel="noopener"><span style="color:red;"> nhà cái AE888</span></a>, quý khách hãy yên tâm về những lo ngại đó bởi chúng tôi đã thành lập một trung tâm bảo mật mạng,
@@ -162,7 +162,7 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88/">vnc88</a> </span>
                     </li>
                 </ul>
             </div>
