--- a/lotteryRef/lotteryRef_11.html
+++ b/lotteryRef/lotteryRef_11.html
@@ -75,7 +75,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <p><span style="font-weight:bold;">>>>>>Xem thêm các nhà cái uy tín:</span><span style="color:red;"><a href="https://www.vnc88.com/">tại đây<<<<<</a></span> </p>
+                        <p><span style="font-weight:bold;">>>>>>Xem thêm các nhà cái uy tín:</span><span style="color:red;"><a href="https://www.vnc88/">tại đây<<<<<</a></span> </p>
                         <!-- 查看更多信譽良好的博彩公司 連回首頁的排名列表 -->
                     </li>
                 </ul>
@@ -121,9 +121,9 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
-            <div>   
+            <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
                     <ul>
@@ -134,9 +134,9 @@
                                     <p>{{item.title}}</p>
                                 </a>
                             </li>
-                        </template> 
+                        </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
