--- a/newsRef/newsRef_1.html
+++ b/newsRef/newsRef_1.html
@@ -14,7 +14,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Trang chủ Quỷ đỏ đã đăng tải dòng thông báo đạt thỏa thuận với Real Madrid trong thương vụ Raphael Varane.
+                        <span class="selfTxt">vnc88</span> Trang chủ Quỷ đỏ đã đăng tải dòng thông báo đạt thỏa thuận với Real Madrid trong thương vụ Raphael Varane.
                     </li>
                     <li>
                         Manchester United đã xác nhận trên trang chủ câu lạc bộ họ đã đạt được thỏa thuận với Real Madrid về việc ký hợp đồng với Raphael Varane.
@@ -137,7 +137,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -149,7 +149,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -159,7 +159,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
