--- a/newsRef/newsRef_13.html
+++ b/newsRef/newsRef_13.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>HLV Thomas Tuchel hiển nhiên hiểu rằng đội hình của ông còn nhiều khiếm khuyết cần phải khắc phục và bổ sung.
+                        <span class="selfTxt">vnc88</span>HLV Thomas Tuchel hiển nhiên hiểu rằng đội hình của ông còn nhiều khiếm khuyết cần phải khắc phục và bổ sung.
                     </li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
         </div>
 
 
-        
+
         <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
@@ -76,7 +76,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -88,7 +88,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -98,7 +98,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
