--- a/newsRef/newsRef_16.html
+++ b/newsRef/newsRef_16.html
@@ -14,7 +14,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Arsenal đã không thể giành vé dự cúp châu Âu mùa tới sau khi trải qua mùa bóng 2020/21 đầy thất vọng.
+                        <span class="selfTxt">vnc88</span>Arsenal đã không thể giành vé dự cúp châu Âu mùa tới sau khi trải qua mùa bóng 2020/21 đầy thất vọng.
                     </li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
 
 
 
-       <div class="newsCnt_menu">
+        <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
@@ -86,7 +86,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -98,7 +98,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -108,7 +108,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
