--- a/newsRef/newsRef_18.html
+++ b/newsRef/newsRef_18.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>8 quốc gia có vé dự vòng đấu dành cho 8 đội cuối cùng ở Thế vận hội đã được xác định.
+                        <span class="selfTxt">vnc88</span>8 quốc gia có vé dự vòng đấu dành cho 8 đội cuối cùng ở Thế vận hội đã được xác định.
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -122,7 +122,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="localNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -132,7 +132,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
