--- a/newsRef/newsRef_2.html
+++ b/newsRef/newsRef_2.html
@@ -14,7 +14,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span> Hãy cùng điểm qua đội hình với 11 bản hợp đồng thất bại của Arsenal trong thế kỷ XXI theo quan điểm của ký giả Dave Seager (The Sun).
+                        <span class="selfTxt">vnc88</span> Hãy cùng điểm qua đội hình với 11 bản hợp đồng thất bại của Arsenal trong thế kỷ XXI theo quan điểm của ký giả Dave Seager (The Sun).
                     </li>
                     <li>
                         Thủ môn Vito Mannone. Thủ thành người Italia chỉ ra sân vỏn vẹn 23 lần trong 7 mùa giải gắn bó với Arsenal. Đến mùa Hè 2013, anh quyết định gia nhập Sunderland và có cơ hội bắt chính nhiều hơn.
@@ -124,7 +124,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -136,7 +136,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -146,7 +146,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
