--- a/newsRef/newsRef_3.html
+++ b/newsRef/newsRef_3.html
@@ -14,7 +14,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Siêu sao người Bồ Đào Nha đã từng đưa ra những lời nhận xét chính xác về mục tiêu của Quỷ đỏ.
+                        <span class="selfTxt">vnc88</span>Siêu sao người Bồ Đào Nha đã từng đưa ra những lời nhận xét chính xác về mục tiêu của Quỷ đỏ.
                     </li>
                     <li>
                         Sau những nỗ lực trên bàn đàm phán, cuối cùng Manchester United cũng đã đạt thỏa thuận chiêu mộ trung vệ Raphael Varane từ phía Real Madrid. Giờ đây, ngôi sao người Pháp <span class="color-b">chỉ cần hoàn tất quá trình kiểm tra y tế</span>cùng
@@ -103,7 +103,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -115,7 +115,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -125,7 +125,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
