--- a/newsRef/newsRef_4.html
+++ b/newsRef/newsRef_4.html
@@ -14,7 +14,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Hãy cùng điểm qua 10 trung vệ đang sở hữu mức thu nhập hàng đầu tại giải đấu khắc nghiệt nhất xứ sương mù.
+                        <span class="selfTxt">vnc88</span>Hãy cùng điểm qua 10 trung vệ đang sở hữu mức thu nhập hàng đầu tại giải đấu khắc nghiệt nhất xứ sương mù.
                     </li>
                 </ul>
             </div>
@@ -98,7 +98,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -110,7 +110,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -120,7 +120,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
