--- a/newsRef/newsRef_5.html
+++ b/newsRef/newsRef_5.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Chelsea đánh bại Bournemouth 2-1 ở trận giao hữu đầu mùa giải và dưới đây là 5 điểm nhấn đáng chú ý của trận đấu.
+                        <span class="selfTxt">vnc88</span>Chelsea đánh bại Bournemouth 2-1 ở trận giao hữu đầu mùa giải và dưới đây là 5 điểm nhấn đáng chú ý của trận đấu.
                     </li>
                 </ul>
             </div>
@@ -175,7 +175,7 @@
 
 
 
-         <div class="newsCnt_menu">
+        <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
@@ -189,7 +189,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -201,7 +201,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -211,7 +211,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
