--- a/newsRef/newsRef_6.html
+++ b/newsRef/newsRef_6.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Phóng viên Dean Jones cho biết Chelsea đã trình bày các điều khoản cá nhân với tiền đạo Romelu Lukaku.
+                        <span class="selfTxt">vnc88</span>Phóng viên Dean Jones cho biết Chelsea đã trình bày các điều khoản cá nhân với tiền đạo Romelu Lukaku.
                     </li>
                 </ul>
             </div>
@@ -95,7 +95,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -107,7 +107,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -117,7 +117,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
