--- a/newsRef/newsRef_9.html
+++ b/newsRef/newsRef_9.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Nhà báo David Ornstein khẳng định Pháo thủ vẫn quyết tâm chiêu mộ thủ thành 23 tuổi bất chấp những trở ngại, khó khăn gần đây.
+                        <span class="selfTxt">vnc88</span>Nhà báo David Ornstein khẳng định Pháo thủ vẫn quyết tâm chiêu mộ thủ thành 23 tuổi bất chấp những trở ngại, khó khăn gần đây.
                     </li>
                 </ul>
             </div>
@@ -91,7 +91,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -103,7 +103,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -113,7 +113,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
