--- a/betRef/betRef_4.html
+++ b/betRef/betRef_4.html
@@ -12,8 +12,8 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt" style="font-weight:bold;">VNC88.com</span>Được thành lập vào năm 2019, <span style="font-weight:bold;">JBO</span> (JUST BET ONLINE) là công ty giải trí trực tuyến cung cấp sản phẩm đa dạng như cược thể thao,
-                        esports và casino. <span style="font-weight:bold;">JBO</span> là website Cá Cược Trực Tuyến Chuyên Esports Đầu Tiên Tại Việt Nam, với mong muốn kết nối cộng đồng Esports và mang đến trải nghiệm giải trí vượt trội. <span style="font-weight:bold;">JBO</span>                        là một công ty chuyên nghiệp được ủy quyền và quản lý bởi chính phủ Philippines, có giấy phép kinh doanh trò chơi trực tuyến First Cagaya – cơ quan có thẩm quyền nhất ở Philippines. Do đó giao dịch tại website hoàn toàn minh bạch
+                        <span class="selfTxt" style="font-weight:bold;">vnc88</span>Được thành lập vào năm 2019, <span style="font-weight:bold;">JBO</span> (JUST BET ONLINE) là công ty giải trí trực tuyến cung cấp sản phẩm đa dạng như cược thể thao, esports
+                        và casino. <span style="font-weight:bold;">JBO</span> là website Cá Cược Trực Tuyến Chuyên Esports Đầu Tiên Tại Việt Nam, với mong muốn kết nối cộng đồng Esports và mang đến trải nghiệm giải trí vượt trội. <span style="font-weight:bold;">JBO</span>                        là một công ty chuyên nghiệp được ủy quyền và quản lý bởi chính phủ Philippines, có giấy phép kinh doanh trò chơi trực tuyến First Cagaya – cơ quan có thẩm quyền nhất ở Philippines. Do đó giao dịch tại website hoàn toàn minh bạch
                         và an toàn. Mục tiêu của JBO là đảm bảo an toàn cũng như bảo vệ lợi ích cho thành viên tham gia tại Website. Tại JBO, bộ phận chăm sóc khách hàng chuyên nghiệp 24/7 sẽ giúp bạn giải đáp những thắc mắc khi tham gia tại website.
                         Tự hào là Nhà Thể Thao và Esports Hàng Đầu Châu Á, JBO cung cấp hơn hàng ngàn trận đấu khác nhau mỗi ngày, bao gồm các giải đấu Esport lớn, sự kiện thể thao trong và ngoài nước, sòng bài (casino) trực tuyến. Với tiêu chí mang đến
                         cho người chơi trải nghiệm giải trí tuyệt vời nhất tại website, JBO không ngừng nỗ lực cải thiện sản phẩm và nâng cấp dịch vụ để trở thành Website Cá Cược Thể Thao và Esport Hàng Đầu Châu Á.
@@ -124,7 +124,7 @@
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
-                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88.com/">vnc88.com</a> </span>
+                    <li><span style="font-weight:bold;">Xem thêm các thông tin về nhà cái uy tín tại  <span style="color:red;"><a href="https://www.vnc88/">vnc88</a> </span>
                     </li>
                 </ul>
             </div>
