--- a/lotteryRef/lotteryRef_5.html
+++ b/lotteryRef/lotteryRef_5.html
@@ -188,7 +188,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <p><span style="font-weight:bold;">>>>>>Xem trực tiếp bóng đá và soi kèo nhà cái tại :</span><span style="color:red;"><a href="https://www.vnc88.com/">vnc88<<<<<</a></span> </p>
+                        <p><span style="font-weight:bold;">>>>>>Xem trực tiếp bóng đá và soi kèo nhà cái tại :</span><span style="color:red;"><a href="https://www.vnc88/">vnc88<<<<<</a></span> </p>
                     </li>
                 </ul>
             </div>
@@ -208,9 +208,9 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
-            <div>   
+            <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
                     <ul>
@@ -221,9 +221,9 @@
                                     <p>{{item.title}}</p>
                                 </a>
                             </li>
-                        </template> 
+                        </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
