--- a/lotteryRef/lotteryRef_8.html
+++ b/lotteryRef/lotteryRef_8.html
@@ -222,7 +222,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <p><span style="font-weight:bold;">>>>>>Tham khảo thêm các Nhà cái uy tín</span><span style="color:red;"><a href="https://www.vnc88.com/">tại đây<<<<<</a></span> </p>
+                        <p><span style="font-weight:bold;">>>>>>Tham khảo thêm các Nhà cái uy tín</span><span style="color:red;"><a href="https://www.vnc88/">tại đây<<<<<</a></span> </p>
                         <!-- 在此處查看更多信譽良好的博彩公司 連回首頁的排名列表 -->
                     </li>
                 </ul>
@@ -244,9 +244,9 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
-            <div>   
+            <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
                     <ul>
@@ -257,9 +257,9 @@
                                     <p>{{item.title}}</p>
                                 </a>
                             </li>
-                        </template> 
+                        </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
