--- a/newsRef/newsRef_10.html
+++ b/newsRef/newsRef_10.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>HLV Ole Gunnar Solskjaer và các cộng sự đứng trước một mùa hè bận rộn với rất nhiều vấn đề cần giải quyết.
+                        <span class="selfTxt">vnc88</span>HLV Ole Gunnar Solskjaer và các cộng sự đứng trước một mùa hè bận rộn với rất nhiều vấn đề cần giải quyết.
                     </li>
                 </ul>
             </div>
@@ -129,7 +129,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -141,7 +141,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -151,7 +151,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
