--- a/newsRef/newsRef_11.html
+++ b/newsRef/newsRef_11.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Chân sút chủ lực Borussia Dortmund bày tỏ về khả năng cải thiện của bản thân và đồng đội mới.
+                        <span class="selfTxt">vnc88</span>Chân sút chủ lực Borussia Dortmund bày tỏ về khả năng cải thiện của bản thân và đồng đội mới.
                     </li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -101,7 +101,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -111,7 +111,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
