--- a/newsRef/newsRef_12.html
+++ b/newsRef/newsRef_12.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Tiền đạo người Ai Cập đã gặp rất nhiều khó khăn trong trận đấu tập nội bộ giữa các cầu thủ Liverpool.
+                        <span class="selfTxt">vnc88</span>Tiền đạo người Ai Cập đã gặp rất nhiều khó khăn trong trận đấu tập nội bộ giữa các cầu thủ Liverpool.
                     </li>
                 </ul>
             </div>
@@ -89,10 +89,10 @@
                 <p>Endo | 12:17 28/07/2021</p>
             </div>
         </div>
-        
 
 
-       <div class="newsCnt_menu">
+
+        <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
@@ -106,7 +106,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -118,7 +118,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -128,7 +128,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
