--- a/newsRef/newsRef_14.html
+++ b/newsRef/newsRef_14.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Nhiều khả năng The Blues sẽ đón 1 bản hợp đồng bom tấn ở hàng phòng ngự trong vài ngày tới.
+                        <span class="selfTxt">vnc88</span>Nhiều khả năng The Blues sẽ đón 1 bản hợp đồng bom tấn ở hàng phòng ngự trong vài ngày tới.
                     </li>
                 </ul>
             </div>
@@ -88,7 +88,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -100,7 +100,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -110,7 +110,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
