--- a/newsRef/newsRef_17.html
+++ b/newsRef/newsRef_17.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Đội bóng vùng Ruhr dự kiến sẽ có một số sự thay đổi về mặt nhân sự sau khi chia tay tài năng sinh năm 2000.
+                        <span class="selfTxt">vnc88</span>Đội bóng vùng Ruhr dự kiến sẽ có một số sự thay đổi về mặt nhân sự sau khi chia tay tài năng sinh năm 2000.
                     </li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-       <div class="newsCnt_menu">
+        <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
                 <div class="newsCnt_scroll">
@@ -103,7 +103,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -115,7 +115,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -125,7 +125,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
