--- a/newsRef/newsRef_7.html
+++ b/newsRef/newsRef_7.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Liệu bom tấn thứ hai của Manchester United trong mùa Hè này có chứng tỏ được giá trị của bản thân?
+                        <span class="selfTxt">vnc88</span>Liệu bom tấn thứ hai của Manchester United trong mùa Hè này có chứng tỏ được giá trị của bản thân?
                     </li>
                 </ul>
             </div>
@@ -135,7 +135,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -147,7 +147,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -157,7 +157,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
