--- a/newsRef/newsRef_8.html
+++ b/newsRef/newsRef_8.html
@@ -13,7 +13,7 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <span class="selfTxt">VNC88.com</span>Đội chủ sân Emirates dự kiến sẽ ưu tiên cải thiện tuyến giữa bằng một tiền vệ phòng ngự thực sự chất lượng.
+                        <span class="selfTxt">vnc88</span>Đội chủ sân Emirates dự kiến sẽ ưu tiên cải thiện tuyến giữa bằng một tiền vệ phòng ngự thực sự chất lượng.
                     </li>
                 </ul>
             </div>
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        
+
         <div class="newsCnt_menu">
             <div>
                 <div class="mainMsg-title">Tin hot</div>
@@ -92,7 +92,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>    
+                </div>
             </div>
             <div>
                 <div class="mainMsg-title">Tin quan trọng</div>
@@ -104,7 +104,7 @@
                                 <p>{{newsMenu.news_t.title}}</p>
                             </a>
                         </li>
-    
+
                         <template v-for="(item,index) in newsMenu.news_b">
                             <li v-if="lotteryNum != index+2">
                                 <a :href="reHref(false,index)">
@@ -114,7 +114,7 @@
                             </li>
                         </template>
                     </ul>
-                </div>  
+                </div>
             </div>
         </div>
     </div>
