--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         </template>
                         </div>
                         <div class="goTop" @click="goTop()">
-                            <img src="images/icon/arrow-top.png">
+                            <img src="images/icon/arrow-top.svg">
                             <span>TOP</span>
                         </div>
                         <div class="todayGame" id="todayGame" v-show="todayGame" @click="todayGameLog()">
